--- a/app/templates/buscar.html
+++ b/app/templates/buscar.html
@@ -9,6 +9,7 @@
             <option value="LIBRO" {% if tipo == "LIBRO" %}selected{% endif %}>Libros</option>
             <option value="ANIME" {% if tipo == "ANIME" %}selected{% endif %}>Animes</option>
             <option value="MANGA" {% if tipo == "MANGA" %}selected{% endif %}>Mangas</option>
+            <option value="VIDEOJUEGO" {% if tipo == "VIDEOJUEGO" %}selected{% endif %}>VideoJuegos</option>
         </select>
         <button class="btn_search" type="submit">Buscar</button>
     </form>
