--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,7 @@
   <span><strong>{{ conteos.get('anime', 0) }}</strong>Animes</span>
   <span><strong>{{ conteos.get('libro', 0) }}</strong>Libros</span>
   <span><strong>{{ conteos.get('manga', 0) }}</strong>Mangas</span>
+  <span><strong>{{ conteos.get('videojuego', 0) }}</strong>VideoJuegos</span>
 </div>
 
 
