--- a/app/static/css/components/buttons.css
+++ b/app/static/css/components/buttons.css
@@ -3,11 +3,14 @@
     background: #e50914;
     color: white;
     border: none;
+    min-height: 42px;
     padding: 0.8rem 2rem;
     border-radius: 40px;
     font-weight: bold;
     cursor: pointer;
     transition: background 0.3s ease;
+    flex-shrink: 0;
+    flex: 1;
     }
     
 .btn_search:hover {
