--- a/app/static/css/layout/body.css
+++ b/app/static/css/layout/body.css
@@ -2,5 +2,11 @@ body {
     background-color: #121212;
     color: #e0e0e0;
     line-height: 1.6;
-    padding: 2rem;
+    padding: 1rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
