--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -13,6 +13,7 @@
 @import url(./components/search.css);
 @import url(./components/counters.css);
 @import url(./components/tags.css);
+@import url(./components/menu.css);
 
 @import url(./pages/catalog.css);
 @import url(./pages/details.css);
