--- a/app/templates/biblioteca.html
+++ b/app/templates/biblioteca.html
@@ -7,8 +7,12 @@
     <input type="text" name="title" placeholder="Busqueda por titulo" id="search-bar-library">
     <select name="type" id="type-bar-library">
         <option value="anime"> Anime </option>
+        <option value="dorama"> Dorama </option>
         <option value="libro"> Libro </option>
         <option value="manga"> Manga </option>
+        <option value="pelicula"> Pelicula </option>
+        <option value="serie"> Serie </option>
+        <option value="videojuego"> Videojuego </option>
     </select>
     <button type="submit">Buscar</button>     
 </form>
