--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,11 @@
 <div class="counter">
   <span><strong>{{ conteos.get('total', 0) }}</strong>Total</span>
   <span><strong>{{ conteos.get('anime', 0) }}</strong>Animes</span>
+  <span><strong>{{ conteos.get('dorama', 0) }}</strong>Doramas</span>
   <span><strong>{{ conteos.get('libro', 0) }}</strong>Libros</span>
   <span><strong>{{ conteos.get('manga', 0) }}</strong>Mangas</span>
+  <span><strong>{{ conteos.get('pelicula', 0) }}</strong>Peliculas</span>
+  <span><strong>{{ conteos.get('serie', 0) }}</strong>Series</span>
   <span><strong>{{ conteos.get('videojuego', 0) }}</strong>VideoJuegos</span>
 </div>
 
